--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Gallery</title>
-    <link rel="stylesheet" href="css/reset.css" />
-  </head>
-  <body>
-    <p><a href="./index.html">Go back</a></p>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title></title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="./node_modules/simplelightbox/dist/simple-lightbox.min.css">
+  <link rel="stylesheet" href="./css/1-gallery.css">
+</head>
+
+<body>
+  <div class="container">
     <ul class="gallery"></ul>
+  </div>
+  <script type="module" src="./js/1-gallery.js"></script>
+</body>
 
-    <script src="./js/1-gallery.js" type="module" defer></script>
-  </body>
 </html>
